--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-tippy",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "description": "An error reporter for Felte using Tippy.js",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,7 +10,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-tippy",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -20,13 +25,13 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
-    "@felte/common": "^0.3.7"
+    "@felte/common": "^0.4.0"
   },
   "peerDependencies": {
     "tippy.js": "^6.0.0"
   },
   "devDependencies": {
-    "felte": "^0.6.7"
+    "felte": "^0.7.0"
   },
   "license": "MIT",
   "publishConfig": {
