--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "@wessberg/rollup-plugin-ts": "^1.3.8",
+    "rollup-plugin-ts": "^1.4.0",
     "all-contributors-cli": "^6.20.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
