--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-svelte",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "An error reporter for Felte using a Svelte component",
   "main": "dist/index.js",
   "svelte": "src/index.js",
@@ -26,8 +26,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.4.0",
-    "nanoid": "^3.1.23"
+    "@felte/common": "^0.4.0"
   },
   "publishConfig": {
     "access": "public"
