--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@felte/solid-js",
+  "name": "@felte/solid",
   "version": "0.1.0",
   "description": "An extensible form library for SolidJS",
   "main": "dist/index.js",
