--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,18 +12,13 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": ["solidjs", "solid", "forms", "validation"],
+  "keywords": ["forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
     "docs:build": "typedoc --out ../../docs",
     "dev": "rollup -cw",
-    "prepublishOnly": "pnpm build && pnpm test",
-    "test": "jest",
-    "test:ci": "jest --ci --coverage"
-  },
-  "peerDependencies": {
-    "solid-js": "^1.0.0"
+    "prepublishOnly": "pnpm build"
   },
   "files": ["dist"],
   "dependencies": {
@@ -33,7 +28,6 @@
     "access": "public"
   },
   "devDependencies": {
-    "solid-js": "^1.0.0",
     "ts-jest": "^26.5.0"
   },
   "exports": {
