--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/solid",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "An extensible form library for SolidJS",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -12,7 +12,12 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": ["solidjs", "solid", "forms", "validation"],
+  "keywords": [
+    "solidjs",
+    "solid",
+    "forms",
+    "validation"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -25,9 +30,11 @@
   "peerDependencies": {
     "solid-js": "^1.0.0"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@felte/core": "workspace:^0.0.1"
+    "@felte/core": "workspace:^0.1.0"
   },
   "publishConfig": {
     "access": "public"
