--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "felte",
-  "version": "0.7.6",
+  "version": "0.7.7",
   "description": "An extensible form library for Svelte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -12,11 +12,7 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["svelte", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -29,17 +25,15 @@
   "peerDependencies": {
     "svelte": "^3.31.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
-    "@felte/core": "workspace:^0.1.0"
+    "@felte/core": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@felte/common": "workspace:^0.4.3",
+    "@felte/common": "workspace:^0.4.4",
     "ts-jest": "^26.5.0"
   },
   "exports": {
