--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -12,11 +12,7 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["svelte", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -29,9 +25,7 @@
   "peerDependencies": {
     "svelte": "^3.31.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@felte/core": "workspace:*"
   },
@@ -39,7 +33,6 @@
     "access": "public"
   },
   "devDependencies": {
-    "@felte/common": "workspace:^0.4.4",
     "ts-jest": "^26.5.0"
   },
   "exports": {
