--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -9,13 +9,8 @@
   "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
-  "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-dom",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-svelte",
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -31,10 +26,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "devDependencies": {
     "felte": "^0.7.8",
     "rollup-plugin-svelte": "^7.1.0",
