--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@felte/reporter-solid",
   "version": "0.0.1",
-  "description": "An error reporter for Felte using a Svelte component",
+  "description": "An error reporter for Felte using a Solid component",
   "main": "dist/index.js",
   "svelte": "src/index.js",
   "browser": "dist/index.js",
@@ -26,7 +26,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "tsc && rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@felte/common": "workspace:*"
