--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -10,12 +10,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-svelte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -26,15 +21,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.4.5"
+    "@felte/common": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "devDependencies": {
     "felte": "^0.7.8",
     "rollup-plugin-svelte": "^7.1.0",
