--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-solid",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An error reporter for Felte using a Solid component",
   "main": "dist/index.js",
   "sideEffects": false,
@@ -24,7 +24,9 @@
     },
     "./package.json": "./package.json"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc && rollup -c",
     "dev": "tsc-watch --onSuccess 'rollup -c'",
