--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -12,7 +12,12 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": ["solidjs", "solid", "forms", "validation"],
+  "keywords": [
+    "solidjs",
+    "solid",
+    "forms",
+    "validation"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -25,7 +30,9 @@
   "peerDependencies": {
     "solid-js": "^1.0.0"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@felte/core": "workspace:*"
   },
