feat(reporter-svelte): add TypeScript types

--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -6,16 +6,12 @@
   "svelte": "src/index.js",
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
+  "types": "types/index.d.ts",
   "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-svelte",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -31,10 +27,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src", "types"],
   "devDependencies": {
     "felte": "^0.7.9",
     "rollup-plugin-svelte": "^7.1.0",
