--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -70,6 +70,16 @@
         "code",
         "bug"
       ]
+    },
+    {
+      "login": "djhi",
+      "name": "Gildas Garcia",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1122076?v=4",
+      "profile": "https://github.com/djhi",
+      "contributions": [
+        "code",
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
