--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "rollup-plugin-ts": "^1.4.0",
     "all-contributors-cli": "^6.20.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
@@ -52,6 +51,7 @@
     "rollup": "^2.38.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^1.4.0",
     "superstruct": "^0.15.0",
     "svelte": "^3.31.0",
     "svelte-focus-on": "^0.1.4",
@@ -72,7 +72,12 @@
     "npm": "6.14.13"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.14.5",
     "@changesets/cli": "^2.14.1",
+    "@solid-reach/rollup-plugin-jsx": "^0.0.2",
+    "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "babel-plugin-dev-expression": "^0.2.2",
+    "package-build-stats": "^7.2.4",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
   }
