--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -7,13 +7,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-solid",
-  "keywords": [
-    "solidjs",
-    "solid",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["solidjs", "solid", "forms", "validation", "felte"],
   "license": "MIT",
   "type": "module",
   "types": "dist/index.d.ts",
@@ -24,12 +18,10 @@
     },
     "./package.json": "./package.json"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
-    "build": "tsc && rollup -c",
-    "dev": "tsc-watch --onSuccess 'rollup -c'",
+    "build": "rollup -c",
+    "dev": "rollup -cw",
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
