--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,14 +10,8 @@
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
-  "keywords": [
-    "svelte",
-    "forms",
-    "utility"
-  ],
-  "files": [
-    "dist"
-  ],
+  "keywords": ["svelte", "forms", "utility"],
+  "files": ["dist"],
   "publishConfig": {
     "access": "public"
   },
@@ -39,7 +33,8 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "default": "./dist/esm/index.js"
     },
     "./dist/utils/*": "./dist/esm/utils/*.js",
     "./package.json": "./package.json"
