--- a/packages/extender-persist/package.json
+++ b/packages/extender-persist/package.json
@@ -10,11 +10,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/extender-persist",
-  "keywords": [
-    "svelte",
-    "forms",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -36,7 +32,8 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
   }
