--- a/packages/extender-persist/package.json
+++ b/packages/extender-persist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/extender-persist",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Use localStorage to persist your Felte forms",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,7 +10,11 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/extender-persist",
-  "keywords": ["svelte", "forms", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
