--- a/packages/reporter-cvapi/package.json
+++ b/packages/reporter-cvapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-cvapi",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "An error reporter for Felte using the browser's Constraint Validation API",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,7 +10,12 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-cvapi",
-  "keywords": ["svelte", "forms", "validation", "felte"],
+  "keywords": [
+    "svelte",
+    "forms",
+    "validation",
+    "felte"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -21,10 +26,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.4.0"
+    "@felte/common": "^0.4.9"
   },
   "devDependencies": {
-    "felte": "^0.7.0"
+    "felte": "^0.7.11"
   },
   "publishConfig": {
     "access": "public"
