--- a/packages/reporter-dom/package.json
+++ b/packages/reporter-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-dom",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "An error reporter for Felte using the DOM",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,12 +10,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-dom",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -29,7 +24,7 @@
     "@felte/common": "workspace:*"
   },
   "devDependencies": {
-    "felte": "^0.7.11"
+    "felte": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
