--- a/packages/validator-yup/package.json
+++ b/packages/validator-yup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-yup",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "description": "A package to use Yup with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -10,12 +10,7 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-yup",
-  "keywords": [
-    "svelte",
-    "forms",
-    "validation",
-    "felte"
-  ],
+  "keywords": ["svelte", "forms", "validation", "felte"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -29,7 +24,7 @@
     "@felte/common": "workspace:*"
   },
   "devDependencies": {
-    "felte": "^0.8.4",
+    "felte": "workspace:*",
     "yup": "^0.32.9"
   },
   "peerDependencies": {
