--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -40,11 +40,13 @@
     "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.5",
+    "@testing-library/jest-dom": "^5.11.9",
     "@types/node": "^15.12.4",
     "babel-preset-solid": "^1.0.0",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
     "solid-js": "^1.0.0",
+    "solid-testing-library": "^0.2.1",
     "tsc-watch": "^4.4.0",
     "typescript": "~4.3.4"
   },
