--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -12,12 +12,7 @@
   "homepage": "https://felte.dev",
   "repository": "github:pablo-abc/felte",
   "funding": "https://www.buymeacoffee.com/pablo.abc",
-  "keywords": [
-    "solidjs",
-    "solid",
-    "forms",
-    "validation"
-  ],
+  "keywords": ["solidjs", "solid", "forms", "validation"],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -28,11 +23,9 @@
     "test:ci": "jest --ci --coverage"
   },
   "peerDependencies": {
-    "solid-js": "^1.0.0"
+    "solid-js": "^1.2.0"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@felte/core": "workspace:*"
   },
@@ -42,7 +35,7 @@
   "devDependencies": {
     "@felte/common": "workspace:*",
     "@testing-library/jest-dom": "^5.11.9",
-    "solid-js": "^1.0.0",
+    "solid-js": "^1.2.0",
     "solid-testing-library": "^0.2.1",
     "ts-jest": "^26.5.0"
   },
