chore(validator-vest): use Vest v4

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "typescript": "^4.1.3",
     "yup": "^0.32.9",
     "zod": "^1.11.13",
-    "vest": "^4.0.0-next-0370fc"
+    "vest": "^4.0.1"
   },
   "volta": {
     "node": "14.15.5",
