--- a/packages/validator-vest/package.json
+++ b/packages/validator-vest/package.json
@@ -31,10 +31,10 @@
   },
   "devDependencies": {
     "felte": "workspace:*",
-    "vest": "^4.0.0-next-0370fc"
+    "vest": "^4.0.1"
   },
   "peerDependencies": {
-    "vest": "^4.0.0-next-0370fc"
+    "vest": "^4.0.1"
   },
   "publishConfig": {
     "access": "public"
