chore: upgrade ts

--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -38,6 +38,7 @@
     "types"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.16.5",
     "felte": "workspace:*",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.31.0",
