--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -16,6 +16,9 @@
   ],
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
