--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,6 +9,10 @@
   "browser": "dist/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
   "sideEffects": false,
   "keywords": [
     "svelte",
