--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -17,6 +17,10 @@
   ],
   "license": "MIT",
   "types": "dist/index.d.ts",
+  "type": "module",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
