--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -7,6 +7,10 @@
   "browser": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "types/index.d.ts",
+  "type": "module",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
   "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "repository": "github:pablo-abc/felte",
