chore: start prerelease

--- a/packages/reporter-cvapi/package.json
+++ b/packages/reporter-cvapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-cvapi",
-  "version": "0.1.16",
+  "version": "1.0.0-next.0",
   "description": "An error reporter for Felte using the browser's Constraint Validation API",
   "main": "dist/index.js",
   "browser": "dist/index.js",
@@ -30,10 +30,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@felte/common": "^0.6.0"
+    "@felte/common": "^1.0.0-next.0"
   },
   "devDependencies": {
-    "felte": "^0.9.0"
+    "felte": "^1.0.0-next.0"
   },
   "publishConfig": {
     "access": "public"
