--- a/packages/extender-persist/package.json
+++ b/packages/extender-persist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/extender-persist",
-  "version": "0.1.17",
+  "version": "1.0.0-next.0",
   "description": "Use localStorage to persist your Felte forms",
   "main": "dist/index.js",
   "browser": "dist/index.js",
