--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "felte",
-  "version": "0.9.0",
+  "version": "1.0.0-next.0",
   "description": "An extensible form library for Svelte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
