--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/react",
-  "version": "0.1.1",
+  "version": "1.0.0-next.0",
   "description": "An extensible form library for ReactJS",
   "main": "dist/index.js",
   "browser": "dist/index.js",
