--- a/packages/reporter-dom/package.json
+++ b/packages/reporter-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-dom",
-  "version": "0.3.13",
+  "version": "1.0.0-next.0",
   "description": "An error reporter for Felte using the DOM",
   "main": "dist/index.js",
   "browser": "dist/index.js",
