--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-solid",
-  "version": "0.1.14",
+  "version": "1.0.0-next.0",
   "description": "An error reporter for Felte using a Solid component",
   "main": "dist/index.js",
   "sideEffects": false,
