--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-svelte",
-  "version": "0.3.20",
+  "version": "1.0.0-next.0",
   "description": "An error reporter for Felte using a Svelte component",
   "main": "dist/index.js",
   "svelte": "src/index.js",
