--- a/packages/reporter-tippy/package.json
+++ b/packages/reporter-tippy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-tippy",
-  "version": "0.3.12",
+  "version": "1.0.0-next.0",
   "description": "An error reporter for Felte using Tippy.js",
   "main": "dist/index.js",
   "browser": "dist/index.js",
