--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-superstruct",
-  "version": "0.3.2",
+  "version": "1.0.0-next.0",
   "description": "A package to use Superstruct validation with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
