--- a/packages/validator-vest/package.json
+++ b/packages/validator-vest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-vest",
-  "version": "0.1.0",
+  "version": "1.0.0-next.0",
   "description": "A package to use Vest validation with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
