--- a/packages/validator-yup/package.json
+++ b/packages/validator-yup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/validator-yup",
-  "version": "0.2.13",
+  "version": "1.0.0-next.0",
   "description": "A package to use Yup with Felte",
   "main": "dist/index.js",
   "browser": "dist/index.js",
