fix(react): fix `stop is not a function` when in hmr

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,8 +34,7 @@
     "dist"
   ],
   "dependencies": {
-    "@felte/core": "workspace:*",
-    "svelte": "^3.44.3"
+    "@felte/core": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
