fix(react): use ref for form

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,6 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
+    "jsx": "react",
     "declarationDir": "./dist"
   },
   "include": ["src"]
