--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@felte/common": "workspace:*",
     "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/react": "^17.0.37",
     "react": "^17.0.2",
