--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -33,7 +33,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "prebuild": "rimraf ./dist",
+    "build": "pnpm prebuild && rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm run build",
     "test": "jest",
