chore: update peer deps

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.2"
+    "react": "^16.8.0 || >=17.0.0"
   },
   "devDependencies": {
     "@felte/common": "workspace:*",
