--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -65,7 +65,7 @@
     "typescript": "~4.3.4"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.2"
+    "react": "^16.8.0 || >=17.0.0"
   },
   "publishConfig": {
     "access": "public"
