--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -11,7 +11,7 @@
     "declaration": true,
     "declarationMap": true,
     "jsx": "react",
-    "declarationDir": "./dist"
+    "declarationDir": "./dist/types"
   },
   "include": ["src"]
 }
