chore: add svelte example

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "pnpm -r test",
     "test:ci": "pnpm -r test:ci",
     "lint": "eslint packages --max-warnings=0 --ignore-pattern *packages/site*",
-    "build": "pnpm -r build --filter='!@felte/site'",
-    "dev": "pnpm -r --parallel dev --filter='!@felte/site'",
+    "build": "pnpm -r build --filter='!@felte/site' --filter='!@example/*'",
+    "dev": "pnpm -r --parallel dev --filter='!@felte/site' --filter='!@example/*'",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "publish": "pnpm i && pnpm lint && pnpm -r publish",
